--- a/docs/css/hyde.css
+++ b/docs/css/hyde.css
@@ -32,7 +32,7 @@
  */
 
 html {
-  font-family: "Open Sans", Helvetica, Arial, sans-serif;
+  font-family: "PT Sans", Helvetica, Arial, sans-serif;
 }
 @media (min-width: 48em) {
   html {
@@ -79,11 +79,8 @@ html {
 .sidebar-about h1 {
   color: #fff;
   margin-top: 0;
-  font-family: 'Titillium Web', sans-serif;
-  font-weight: 200;
-  font-size: 5.25rem;
-  line-height: .9;
-  /*text-transform: uppercase;*/
+  font-family: "Abril Fatface", serif;
+  font-size: 3.25rem;
 }
 
 /* Sidebar nav */
