--- a/docs/css/hyde.css
+++ b/docs/css/hyde.css
@@ -66,7 +66,7 @@ html {
     left: 0;
     bottom: 0;
     width: 18rem;
-    text-align: left;
+    /*text-align: left;*/
   }
 }
 
@@ -80,7 +80,7 @@ html {
   color: #fff;
   margin-top: 0;
   font-family: 'Titillium Web', sans-serif;
-  font-size: 3.25rem;
+  font-size: 2.5rem;
 }
 
 /* Sidebar nav */
