--- a/layouts/partials/sidebar.html
+++ b/layouts/partials/sidebar.html
@@ -3,8 +3,7 @@
 
     <div class="sidebar-about">
       {{ if isset .Site.Params "gravatarHash" }}
-        <img src="https://www.gravatar.com/avatar/{{ .Site.Params.gravatarHash }}?s=200"
-             alt="gravatar" title="{{ .Site.Author.name }}">
+        <img src="https://www.gravatar.com/avatar/{{ .Site.Params.gravatarHash }}?s=200" srcset="https://www.gravatar.com/avatar/{{ .Site.Params.gravatarHash }}?s=400 2x" alt="gravatar" title="{{ .Site.Author.name }}">
       {{ end }}
       <h1>{{ .Site.Author.name }}</h1>
       {{ with .Site.Params.tagline }}<p class="lead">{{ . | markdownify }}</p>{{ end }}
