--- a/layouts/index.html
+++ b/layouts/index.html
@@ -27,7 +27,46 @@
         {{ end }}
       </div>
       {{ end }}
-      {{ template "_internal/pagination.html" . }}
+
+      <!-- {{ template "_internal/pagination.html" . }} -->
+
+      {{ if gt $paginator.TotalPages 1 }}
+      <ul class="pagination">
+          {{ with $paginator.First }}
+          <li>
+              <a href="{{ .URL }}" aria-label="First"><span aria-hidden="true">&laquo;&laquo;</span></a>
+          </li>
+          {{ end }}
+          <li
+          {{ if not $paginator.HasPrev }}class="disabled"{{ end }}>
+          <a href="{{ if $paginator.HasPrev }}{{ $paginator.Prev.URL }}{{ end }}" aria-label="Previous"><span aria-hidden="true">&laquo;</span></a>
+          </li>
+          <!-- {{ range $paginator.Pagers }}
+          <li
+          {{ if eq . $paginator }}class="active"{{ end }}><a href="{{ .URL }}">{{ .PageNumber }}</a></li>
+          {{ end }} -->
+          <li
+          {{ if not $paginator.HasNext }}class="disabled"{{ end }}>
+          <a href="{{ if $paginator.HasNext }}{{ $paginator.Next.URL }}{{ end }}" aria-label="Next"><span aria-hidden="true">&raquo;</span></a>
+          </li>
+          {{ with $paginator.Last }}
+          <li>
+              <a href="{{ .URL }}" aria-label="Last"><span aria-hidden="true">&raquo;&raquo;</span></a>
+          </li>
+          {{ end }}
+      </ul>
+      {{ end }}
+
+
+
+
+
+
+
+
+
+
+
     </div>
   </div>
 
