--- a/static/css/poole.css
+++ b/static/css/poole.css
@@ -367,6 +367,11 @@ tbody tr:nth-child(odd) th {
   font-family: "PT Sans", Helvetica, Arial, sans-serif;
   color: #ccc;
   text-align: center;
+  display: inline-block;
+}
+
+.pagination > li {
+  display: inline;
 }
 
 /* Pagination items can be `span`s or `a`s */
