--- a/static/css/poole.css
+++ b/static/css/poole.css
@@ -325,6 +325,8 @@ tbody tr:nth-child(odd) th {
   margin-top: -.5rem;
   margin-bottom: 1rem;
   color: #9a9a9a;
+  /*margin-top: 10px;*/
+  font-size: .75rem;
 }
 
 /* Related posts */
