Added Hyde-x branch

--- a/layouts/partials/sidebar.html
+++ b/layouts/partials/sidebar.html
@@ -2,19 +2,19 @@
   <div class="container sidebar-sticky">
     <div class="sidebar-about">
       {{ if isset .Site.Params "gravatarHash" }}
-        <img src="https://www.gravatar.com/avatar/{{ .Site.Params.gravatarHash }}?s=200"
-             alt="gravatar" title="{{ .Site.Author.name }}">
+        <a href="/"><img src="https://www.gravatar.com/avatar/{{ .Site.Params.gravatarHash }}?s=200"
+             alt="gravatar" title="{{ .Site.Author.name }}"></a>
       {{ end }}
-      <h1>{{ .Site.Author.name }}</h1>
+      <a href="/"><h1>{{ .Site.Author.name }}</h1></a>
       {{ with .Site.Params.tagline }}<p class="lead">{{ . | markdownify }}</p>{{ end }}
     </div>
 
-    <ul class="sidebar-nav">
+    <!-- <ul class="sidebar-nav">
       <li class="sidebar-nav-item"><a href="{{ "/" | absURL }}">{{ if isset .Site.Params "home"}}{{ .Site.Params.home }}{{ else }}Blog{{ end }}</a></li>
       {{ range .Site.Menus.main }}
       <li class="sidebar-nav-item">{{ .Pre }}<a href="{{ .URL | absURL }}">{{ .Name }}</a></li>
       {{end}}
-    </ul>
+    </ul> -->
 
     <ul class="sidebar-nav">
       <li class="sidebar-nav-item">
@@ -30,7 +30,7 @@
       </li>
     </ul>
 
-    {{ if isset .Site.Params "flattr" }}
+    <!-- {{ if isset .Site.Params "flattr" }}
     <p><script id='flattr'>
       (function(id){
         var s = document.getElementById(id);
@@ -43,9 +43,10 @@
         s.parentNode.insertBefore(f, s);
       })('flattr');
     </script></p>
-    {{ end }}
+    {{ end }} -->
 
-    <p>Copyright &copy; {{ .Now.Format "2006" }} <a href="{{ "/license/" | absURL }}">License</a><br/>
-       Powered by <a href="http://gohugo.io">Hugo</a> and <a href="https://github.com/zyro/hyde-x">Hyde-X</a></p>
+    <p>Copyright &copy; {{ .Now.Format "2006" }}</p>
+    <!-- <p><a href="{{ "/license/" | absURL }}">License</a><br/>
+       Powered by <a href="http://gohugo.io">Hugo</a> and <a href="https://github.com/zyro/hyde-x">Hyde-X</a></p> -->
   </div>
 </div>
