--- a/docs/css/poole.css
+++ b/docs/css/poole.css
@@ -325,6 +325,8 @@ tbody tr:nth-child(odd) th {
   margin-top: -.5rem;
   margin-bottom: 1rem;
   color: #9a9a9a;
+  /*margin-top: 10px;*/
+  font-size: .75rem;
 }
 
 /* Related posts */
@@ -367,6 +369,11 @@ tbody tr:nth-child(odd) th {
   font-family: "PT Sans", Helvetica, Arial, sans-serif;
   color: #ccc;
   text-align: center;
+  display: inline-block;
+}
+
+.pagination > li {
+  display: inline;
 }
 
 /* Pagination items can be `span`s or `a`s */
