--- a/static/css/poole.css
+++ b/static/css/poole.css
@@ -80,14 +80,16 @@ a:focus {
 /* Headings */
 h1, h2, h3, h4, h5, h6 {
   margin-bottom: .5rem;
-  font-weight: bold;
+  /*font-weight: bold;*/
+  font-weight: normal;
   line-height: 1.25;
-  color: #313131;
-  font-family: 'Titillium Web', sans-serif;
+  color: #515151;  /*#313131;*/
+  /*font-family: 'Titillium Web', sans-serif;*/
   text-rendering: optimizeLegibility;
 }
 h1 {
   font-size: 2rem;
+  font-family: 'Titillium Web', sans-serif;
 }
 h2 {
   margin-top: 1rem;
