--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -10,7 +10,7 @@
   <title>{{ .Title }} &middot; {{ .Site.Author.name }}</title>
 
   <!-- CSS -->
-  <link rel="stylesheet" href="{{ .Site.BaseURL }}css/bundle.css">
+  <link rel="stylesheet" href="{{ .Site.BaseURL }}css/styles.css">
   <!-- <link rel="stylesheet" href="{{ .Site.BaseURL }}css/syntax.css">
   <link rel="stylesheet" href="{{ .Site.BaseURL }}css/hyde.css"> -->
   <!-- <link rel="stylesheet" href="{{ .Site.BaseURL }}css/hyde-x.css"> -->
