--- a/static/css/hyde.css
+++ b/static/css/hyde.css
@@ -93,6 +93,7 @@ li.disabled {
   margin-top: 0;
   /*font-family: 'Titillium Web', sans-serif;*/
   font-size: 3rem;
+  font-weight: 200;
 }
 
 /* About section */
