--- a/scss/hr.scss
+++ b/scss/hr.scss
@@ -13,14 +13,14 @@ hr.hr-sidebar {
   background-image:      linear-gradient(to right, rgba(0,0,0,0), rgba(0,0,0,0.75), rgba(0,0,0,0));
 }
 
-@media screen and (min-width: 992px) {
-  hr.soften {
-    margin: 55px 0px 55px 0px;  // top right bottom left
-  }
-}
-
-@media screen and (min-width: 1200px) {
-  hr.soften {
-    margin: 65px 0px 65px 0px;  // top right bottom left
-  }
-}
+// @media screen and (min-width: 992px) {
+//   hr.soften {
+//     margin: 55px 0px 55px 0px;  // top right bottom left
+//   }
+// }
+//
+// @media screen and (min-width: 1200px) {
+//   hr.soften {
+//     margin: 65px 0px 65px 0px;  // top right bottom left
+//   }
+// }
