--- a/scss/pagination.scss
+++ b/scss/pagination.scss
@@ -4,48 +4,30 @@
 // there are no more previous or next posts to show.
 
 .pagination {
-  overflow: hidden; // clearfix
-  margin: 0 -1.5rem 1rem;
-  color: #ccc;
-  text-align: center;
+  display: inline-block;
+  padding-left: 0;
+  width: 100%;
 }
-
-// Pagination items can be `span`s or `a`s
-.pagination-item {
-  display: block;
-  padding: 1rem;
-  border: solid #eee;
-  border-width: 1px 0;
-
-  &:first-child {
-    margin-bottom: -1px;
-  }
+.pagination > li {
+  display: inline;
+  font-size: 1.5rem;
 }
-
-// Only provide a hover state for linked pagination items
-a.pagination-item:hover {
-  background-color: #f5f5f5;
+.pagination > li:first-child > a,
+.pagination > li:first-child > span {
+  position: relative;
+  float: left;
 }
-
-@media (min-width: 30em) {
-  .pagination {
-    margin: 3rem 0;
-  }
-
-  .pagination-item {
-    float: left;
-    width: 50%;
-    border-width: 1px;
-
-    &:first-child {
-      margin-bottom: 0;
-      border-top-left-radius:    4px;
-      border-bottom-left-radius: 4px;
-    }
-    &:last-child {
-      margin-left: -1px;
-      border-top-right-radius:    4px;
-      border-bottom-right-radius: 4px;
-    }
-  }
+.pagination > li:last-child > a,
+.pagination > li:last-child > span {
+  position: relative;
+  float: right;
+  text-align: right;
+}
+.pagination > .disabled > span,
+.pagination > .disabled > span:hover,
+.pagination > .disabled > span:focus,
+.pagination > .disabled > a,
+.pagination > .disabled > a:hover,
+.pagination > .disabled > a:focus {
+  display: none;
 }
