--- a/scss/variables.scss
+++ b/scss/variables.scss
@@ -20,7 +20,7 @@ $root-line-height: 1.5;
 
 $body-color: #515151;
 $body-bg: #fff;
-$link-color: $blue;
+$link-color: #515151;
 
 $border-color: #e5e5e5;
 
