--- a/scss/sidebar.scss
+++ b/scss/sidebar.scss
@@ -26,7 +26,7 @@
  }
  .myface i {
    position: absolute;
-   display: block;
+   display: none;
    text-align: center;
    top: 50%;
    left: 0;
@@ -62,7 +62,13 @@
   .sidebar-about img {
     display: block !important;
   }
+  .sidebar-about p {
+    display: block !important;
+  }
   .myface img {
+    display: block !important;
+  }
+  .myface i {
     display: block !important;
   }
 }
@@ -77,9 +83,12 @@
 .sidebar-about h1 {
   color: #fff;
   margin-top: 0;
-  // font-family: "Abril Fatface", serif;
   font-size: 2.8rem;
   font-weight: 200;
+}
+
+.sidebar-about p {
+  display: none;
 }
 
 .sidebar-about img {
