--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -558,7 +558,7 @@ footer {
 
 .myface i {
   position: absolute;
-  display: block;
+  display: none;
   text-align: center;
   top: 50%;
   left: 0;
@@ -589,7 +589,11 @@ footer {
     width: 18rem; }
   .sidebar-about img {
     display: block !important; }
+  .sidebar-about p {
+    display: block !important; }
   .myface img {
+    display: block !important; }
+  .myface i {
     display: block !important; } }
 
 /* Sidebar links */
@@ -602,6 +606,9 @@ footer {
   margin-top: 0;
   font-size: 2.8rem;
   font-weight: 200; }
+
+.sidebar-about p {
+  display: none; }
 
 .sidebar-about img {
   display: none;
