--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -27,7 +27,7 @@
     document.head.appendChild(link);
   }
 </script> -->
-<script>
+<!-- <script>
 // // Load Scripts
 // function loadScript (url, async) {
 //   return new Promise(function (resolve, reject) {
@@ -65,4 +65,4 @@ function loadStyles (url) {
 loadStyles('https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css');
 // loadScript('lib/jquery/dist/jquery.min.js');
 // loadScript('lib/totop.js/totop.min.js', true);
-</script>
+</script> -->
