--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -55,6 +55,56 @@ tbody tr:nth-child(odd) td,
 tbody tr:nth-child(odd) th {
   background-color: #f9f9f9; }
 
+@font-face {
+  font-family: 'icomoon';
+  src: url("../fonts/icomoon.eot?y9uzuy");
+  src: url("../fonts/icomoon.eot?y9uzuy#iefix") format("embedded-opentype"), url("../fonts/icomoon.ttf?y9uzuy") format("truetype"), url("../fonts/icomoon.woff?y9uzuy") format("woff"), url("../fonts/icomoon.svg?y9uzuy#icomoon") format("svg");
+  font-weight: normal;
+  font-style: normal; }
+
+[class^="icon-"], [class*=" icon-"] {
+  /* use !important to prevent issues with browser extensions that change fonts */
+  font-family: 'icomoon' !important;
+  speak: none;
+  font-style: normal;
+  font-weight: normal;
+  font-variant: normal;
+  text-transform: none;
+  line-height: 1;
+  /* Better Font Rendering =========== */
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale; }
+
+.icon-home:before {
+  content: "\f015"; }
+
+.icon-clock-o:before {
+  content: "\f017"; }
+
+.icon-tag:before {
+  content: "\f02b"; }
+
+.icon-twitter-square:before {
+  content: "\f081"; }
+
+.icon-facebook-square:before {
+  content: "\f082"; }
+
+.icon-linkedin-square:before {
+  content: "\f08c"; }
+
+.icon-github-square:before {
+  content: "\f092"; }
+
+.icon-chevron-circle-left:before {
+  content: "\f137"; }
+
+.icon-chevron-circle-right:before {
+  content: "\f138"; }
+
+.icon-chevron-circle-up:before {
+  content: "\f139"; }
+
 h1, h2, h3, h4, h5, h6 {
   margin-bottom: .5rem;
   font-weight: 500;
@@ -622,8 +672,8 @@ footer {
 
 .sidebar-nav-item {
   display: block;
-  line-height: 1.75;
-  font-size: .9rem; }
+  font-size: 3rem;
+  letter-spacing: -2px; }
 
 a.sidebar-nav-item:hover,
 a.sidebar-nav-item:focus {
