--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -19,6 +19,7 @@
   </style>
 
   <!-- Icons -->
+  <link rel="icon" href="{{.Site.BaseURL}}/favicon.png">
   <link rel="apple-touch-icon-precomposed" sizes="152x152" href="http://www.gravatar.com/avatar/{{ .Site.Params.gravatarHash }}.png?s=152">
   <link rel="apple-touch-icon-precomposed" sizes="120x120" href="http://www.gravatar.com/avatar/{{ .Site.Params.gravatarHash }}.png?s=120">
   <link rel="apple-touch-icon-precomposed" sizes="76x76" href="http://www.gravatar.com/avatar/{{ .Site.Params.gravatarHash }}.png?s=76">
