--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -10,7 +10,7 @@ html {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", Arial, sans-serif;
   font-size: 16px;
   line-height: 1.5; }
-  @media (min-width: 38em) {
+  @media (min-width: 65em) {
     html {
       font-size: 20px; } }
 
@@ -200,14 +200,11 @@ code {
   border-radius: 3px; }
 
 .container {
-  max-width: 38rem;
+  max-width: 50rem;
   padding-left: 1.5rem;
   padding-right: 1.5rem;
   margin-left: auto;
   margin-right: auto; }
-
-footer {
-  margin-bottom: 2rem; }
 
 /* Container
  *
@@ -218,13 +215,13 @@ footer {
   padding-top: 4rem;
   padding-bottom: 4rem; }
 
-@media (min-width: 48em) {
+@media (min-width: 65em) {
   .content {
-    max-width: 38rem;
+    max-width: 40rem;
     margin-left: 20rem;
     margin-right: 2rem; } }
 
-@media (min-width: 64em) {
+@media (min-width: 73em) {
   .content {
     margin-left: 22rem;
     margin-right: 4rem; } }
@@ -351,11 +348,11 @@ footer {
 
 .sidebar {
   text-align: center;
-  padding: 2rem 1rem;
+  padding: 1rem;
   color: rgba(255, 255, 255, 0.5);
   background-color: #202020; }
 
-@media (min-width: 48em) {
+@media (min-width: 65em) {
   .sidebar {
     position: fixed;
     top: 0;
@@ -375,6 +372,9 @@ footer {
 .sidebar a {
   color: rgba(255, 255, 255, 0.5); }
 
+.sidebar p {
+  margin: 0; }
+
 /* About section */
 .sidebar-about h1 {
   color: #fff;
@@ -383,7 +383,8 @@ footer {
   font-weight: 200; }
 
 .sidebar-about p {
-  display: none; }
+  display: none;
+  margin: 0; }
 
 .sidebar-about img {
   display: none;
@@ -392,7 +393,8 @@ footer {
 
 /* Sidebar nav */
 .sidebar-nav {
-  padding-left: 0;
+  padding: 0;
+  margin: 0;
   list-style: none; }
 
 .sidebar-nav-item {
@@ -412,7 +414,7 @@ a.sidebar-nav-item:focus {
  * Add the `sidebar-sticky` class to the sidebar's container to affix it the
  * contents to the bottom of the sidebar in tablets and up.
  */
-@media (min-width: 48em) {
+@media (min-width: 65em) {
   .sidebar-sticky {
     position: absolute;
     right: 1rem;
