--- a/scss/hr.scss
+++ b/scss/hr.scss
@@ -1,28 +1,13 @@
-// Faded out hr                              [complete]
-// ----------------------------------------------------
+// Faded out hr
 .soften {
-  // margin: 35px 0px 35px 0px;  // top right bottom left
   margin-top: 1.5rem;
   border: 0;
   height: 1px;
   background-image:      linear-gradient(to right, rgba(0,0,0,0), rgba(0,0,0,0.75), rgba(0,0,0,0));
 }
-
 .hr-sidebar {
   border: 0;
   height: 1px;
   width: 70%;
   background-image:      linear-gradient(to right, rgba(255,255,255,0), rgba(255,255,255,0.5), rgba(255,255,255,0));
 }
-
-// @media screen and (min-width: 992px) {
-//   hr.soften {
-//     margin: 55px 0px 55px 0px;  // top right bottom left
-//   }
-// }
-//
-// @media screen and (min-width: 1200px) {
-//   hr.soften {
-//     margin: 65px 0px 65px 0px;  // top right bottom left
-//   }
-// }
