--- a/scss/layout.scss
+++ b/scss/layout.scss
@@ -3,15 +3,11 @@
 // Styles for managing the structural hierarchy of the site.
 
 .container {
-  max-width: 38rem;
+  max-width: 50rem;
   padding-left:  1.5rem;
   padding-right: 1.5rem;
   margin-left:  auto;
   margin-right: auto;
-}
-
-footer {
-  margin-bottom: 2rem;
 }
 
 /* Container
@@ -25,15 +21,15 @@ footer {
   padding-bottom: 4rem;
 }
 
-@media (min-width: 48em) {
+@media (min-width: $bp-large) {
   .content {
-    max-width: 38rem;
+    max-width: 40rem;
     margin-left: 20rem;
     margin-right: 2rem;
   }
 }
 
-@media (min-width: 64em) {
+@media (min-width: $bp-xl) {
   .content {
     margin-left: 22rem;
     margin-right: 4rem;
