--- a/scss/posts.scss
+++ b/scss/posts.scss
@@ -41,37 +41,36 @@
   font-weight: 300;
 }
 
-
-// Related posts
-.related {
-  padding-top: 2rem;
-  padding-bottom: 2rem;
-  margin-bottom: 2rem;
-  border-top: 1px solid #eee;
-  border-bottom: 1px solid #eee;
-}
-
-.related-posts {
-  padding-left: 0;
-  list-style: none;
-
-  h3 {
-    margin-top: 0;
-  }
-
-  li {
-    small {
-      font-size: 75%;
-      color: #999;
-    }
-
-    a:hover {
-      color: #268bd2;
-      text-decoration: none;
-
-      small {
-        color: inherit;
-      }
-    }
-  }
-}
+// // Related posts
+// .related {
+//   padding-top: 2rem;
+//   padding-bottom: 2rem;
+//   margin-bottom: 2rem;
+//   border-top: 1px solid #eee;
+//   border-bottom: 1px solid #eee;
+// }
+//
+// .related-posts {
+//   padding-left: 0;
+//   list-style: none;
+//
+//   h3 {
+//     margin-top: 0;
+//   }
+//
+//   li {
+//     small {
+//       font-size: 75%;
+//       color: #999;
+//     }
+//
+//     a:hover {
+//       color: #268bd2;
+//       text-decoration: none;
+//
+//       small {
+//         color: inherit;
+//       }
+//     }
+//   }
+// }
