--- a/scss/layout.scss
+++ b/scss/layout.scss
@@ -1,9 +1,8 @@
 // Layout
-//
 // Styles for managing the structural hierarchy of the site.
 
 .container {
-  max-width: 50rem;
+  max-width: $max-width;
   padding-left:  1.5rem;
   padding-right: 1.5rem;
   margin-left:  auto;
@@ -23,15 +22,15 @@
 
 @media (min-width: $bp-large) {
   .content {
-    max-width: 40rem;
-    margin-left: 20rem;
+    max-width: $max-width;
+    margin-left: 18rem;
     margin-right: 2rem;
   }
 }
 
 @media (min-width: $bp-xl) {
   .content {
-    margin-left: 22rem;
+    margin-left: 20rem;
     margin-right: 4rem;
   }
 }
