--- a/scss/variables.scss
+++ b/scss/variables.scss
@@ -1,3 +1,7 @@
+/**
+ * Colors
+ */
+
 $gray-1: #f9f9f9;
 $gray-2: #ccc;
 $gray-3: #767676;
@@ -13,24 +17,30 @@ $blue: #268bd2;
 $blue: #6a9fb5;
 $brown: #8f5536;
 
-$root-font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", Arial, sans-serif;
-
-$root-font-size: 16px;
-$root-line-height: 1.5;
-
-$body-color: #515151;
 $body-bg: #fff;
+$body-color: #515151;
 $link-color: #515151;
-
 $border-color: #e5e5e5;
-
-$large-font-size: 20px;
-
-$code-font-family: Menlo, Monaco, "Courier New", monospace;
 $code-color: #d14;
 
-// Breakpoints
-$bp-small : 24em;
-$bp-med : 46.8em;
-$bp-large : 65em;
-$bp-xl : 73em;
+/**
+ * Fonts
+ */
+
+$root-font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", Arial, sans-serif;
+$code-font-family: Menlo, Monaco, "Courier New", monospace;
+
+$root-font-size: 18px;
+$large-font-size: 20px;
+$root-line-height: 1.5;
+
+/**
+ * Breakpoints
+ */
+
+$bp-small: 24rem;
+$bp-med: 46.8rem;
+$bp-large: 50rem;
+$bp-xl: 60rem;
+
+$max-width: 38rem;
