--- a/scss/variables.scss
+++ b/scss/variables.scss
@@ -22,6 +22,8 @@ $link-color: #225378;
 $body-color: #515151;
 $border-color: #e5e5e5;
 $code-color: #d14;
+$code-background-color: #f8f8f8;
+$post-title: #303030;
 
 /**
  * Fonts
