--- a/scss/type.scss
+++ b/scss/type.scss
@@ -6,7 +6,7 @@ h1, h2, h3, h4, h5, h6 {
   margin-bottom: .5rem;
   font-weight: 500;
   line-height: 1.25;
-  color: #313131;
+  color: #$gray-5;
   text-rendering: optimizeLegibility;
 }
 
@@ -36,15 +36,12 @@ p {
 }
 
 strong {
-  // color: #303030;
   font-weight: 600;
 }
 
 ul, ol, dl {
   margin-top: 0;
   margin-bottom: 1rem;
-  // font-size: 90%;
-  // line-height: 1.4;
 }
 
 dt {
@@ -90,7 +87,6 @@ blockquote {
 
 
 // Markdown footnotes
-//
 // See the example content post for an example.
 
 // Footnote number within body text
@@ -121,4 +117,3 @@ a[href^="#fnref:"] {
   font-size: .7rem;
   font-weight: 100;
 }
-//1
