--- a/scss/pagination.scss
+++ b/scss/pagination.scss
@@ -1,7 +1,6 @@
-// Pagination
-//
-// Super lightweight (HTML-wise) blog pagination. `span`s are provide for when
-// there are no more previous or next posts to show.
+/**
+ * Super lightweight (HTML-wise) blog pagination.
+ */
 
 .pagination {
   display: inline-block;
