--- a/scss/base.scss
+++ b/scss/base.scss
@@ -1,4 +1,7 @@
-html,
+/**
+ * The Basics
+ */
+
 body {
   margin: 0;
   padding: 0;
@@ -51,6 +54,10 @@ img {
   margin: 0 0 1rem;
   border-radius: 6px;
 }
+
+/**
+ * Tables
+ */
 
 table {
   margin-bottom: 1rem;
