--- a/scss/layout.scss
+++ b/scss/layout.scss
@@ -1,5 +1,6 @@
-// Layout
-// Styles for managing the structural hierarchy of the site.
+/**
+ * Layout
+ */
 
 .container {
   max-width: $max-width;
@@ -8,12 +9,6 @@
   margin-left:  auto;
   margin-right: auto;
 }
-
-/* Container
- *
- * Align the contents of the site above the proper threshold with some margin-fu
- * with a 25%-wide `.sidebar`.
- */
 
 .content {
   padding-top:    4rem;
