--- a/scss/type.scss
+++ b/scss/type.scss
@@ -1,12 +1,12 @@
-// Typography
-//
-// Headings, body text, lists, and other misc typographic elements.
+/**
+ *  Typography
+ */
 
 h1, h2, h3, h4, h5, h6 {
   margin-bottom: .5rem;
   font-weight: 500;
   line-height: 1.25;
-  color: #$gray-5;
+  color: $gray-5;
   text-rendering: optimizeLegibility;
 }
 
