--- a/scss/variables.scss
+++ b/scss/variables.scss
@@ -29,12 +29,13 @@ $post-title: #303030;
  * Fonts
  */
 
-$root-font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", Arial, sans-serif;
-$code-font-family: Menlo, Monaco, "Courier New", monospace;
+// https://www.smashingmagazine.com/2015/11/using-system-ui-fonts-practical-guide/
+$root-font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif !default;
+$code-font-family: Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace !default;
 
 $root-font-size: 18px;
-$large-font-size: 20px;
 $root-line-height: 1.5;
+$large-font-size: 20px;
 
 /**
  * Breakpoints
