--- a/scss/base.scss
+++ b/scss/base.scss
@@ -59,25 +59,25 @@ img {
  * Tables
  */
 
-table {
-  margin-bottom: 1rem;
-  width: 100%;
-  font-size: 85%;
-  border: 1px solid $border-color;
-  border-collapse: collapse;
-}
-
-td,
-th {
-  padding: .25rem .5rem;
-  border: 1px solid $border-color;
-}
-
-th {
-  text-align: left;
-}
-
-tbody tr:nth-child(odd) td,
-tbody tr:nth-child(odd) th {
-  background-color: #f9f9f9;
-}
+// table {
+//   margin-bottom: 1rem;
+//   width: 100%;
+//   font-size: 85%;
+//   border: 1px solid $border-color;
+//   border-collapse: collapse;
+// }
+//
+// td,
+// th {
+//   padding: .25rem .5rem;
+//   border: 1px solid $border-color;
+// }
+//
+// th {
+//   text-align: left;
+// }
+//
+// tbody tr:nth-child(odd) td,
+// tbody tr:nth-child(odd) th {
+//   background-color: #f9f9f9;
+// }
