--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -51,25 +51,6 @@ img {
 /**
  * Tables
  */
-table {
-  margin-bottom: 1rem;
-  width: 100%;
-  font-size: 85%;
-  border: 1px solid #e5e5e5;
-  border-collapse: collapse; }
-
-td,
-th {
-  padding: .25rem .5rem;
-  border: 1px solid #e5e5e5; }
-
-th {
-  text-align: left; }
-
-tbody tr:nth-child(odd) td,
-tbody tr:nth-child(odd) th {
-  background-color: #f9f9f9; }
-
 /**
  * Icomoon Fonts
  */
@@ -236,11 +217,13 @@ code {
   margin-right: auto; }
 
 .content {
-  padding-top: 4rem;
-  padding-bottom: 4rem; }
+  padding-top: 2rem;
+  padding-bottom: 2rem; }
 
 @media (min-width: 50rem) {
   .content {
+    padding-top: 4rem;
+    padding-bottom: 4rem;
     max-width: 38rem;
     margin-left: 18rem;
     margin-right: 2rem; } }
@@ -322,7 +305,7 @@ code {
  * Flexible banner for housing site name, intro, and "footer" content. Starts
  * out above content in mobile and later moves to the side with wider viewports.
  */
-.sidebar > .myface > a {
+.myface > a {
   border-bottom: none; }
 
 .myface {
@@ -410,14 +393,7 @@ code {
 .sidebar-nav-item {
   display: block;
   font-size: 2.5rem;
-  letter-spacing: -2px; }
-
-a.sidebar-nav-item:hover,
-a.sidebar-nav-item:focus {
-  text-decoration: underline; }
-
-.sidebar-nav-item.active {
-  font-weight: bold; }
+  letter-spacing: -1px; }
 
 /* Sticky sidebar
  *
@@ -445,3 +421,47 @@ a.sidebar-nav-item:focus {
   height: 1px;
   width: 70%;
   background-image: linear-gradient(to right, rgba(255, 255, 255, 0), rgba(255, 255, 255, 0.5), rgba(255, 255, 255, 0)); }
+
+/**
+ *  Blog Archives
+ */
+.blog-archives article {
+  margin-left: 0;
+  padding-left: 4em;
+  position: relative;
+  background: url("data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAACgAAAABCAYAAACsXeyTAAAACXBIWXMAAAsTAAALEwEAmpwYAAAAFUlEQVQIHWNIS0sr/v//PwMMDzY+ADqMahlW4J91AAAAAElFTkSuQmCC") bottom left repeat-x; }
+
+.blog-archives article:last-child {
+  background: none; }
+
+.blog-archives > h1 {
+  color: #ccc;
+  display: inline-block;
+  position: relative; }
+
+article > h2 {
+  font-size: 1.1rem;
+  font-weight: 300;
+  margin: .5em 0 .5rem .5rem;
+  /* TRBL */
+  display: inline-block; }
+
+.blog-archives time {
+  position: absolute;
+  text-align: right;
+  left: .5rem;
+  top: .7rem;
+  font-size: .8rem;
+  color: #ccc;
+  display: inline-block;
+  text-transform: uppercase; }
+
+@media (min-width: 50rem) {
+  .blog-archives article {
+    margin-left: 2em;
+    padding-left: 4.5em; }
+  article > h2 {
+    font-size: 1.3rem; }
+  .blog-archives time {
+    top: .8rem;
+    font-size: 1rem; } }
