--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -30,7 +30,10 @@ body {
   color: #515151;
   background-color: #fff;
   -webkit-text-size-adjust: 100%;
-  -ms-text-size-adjust: 100%; }
+  -ms-text-size-adjust: 100%;
+  /* Better Font Rendering =========== */
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale; }
 
 a {
   color: #225378;
@@ -38,7 +41,7 @@ a {
   transition: all 0.2s ease-in-out; }
   a:hover, a:focus {
     text-decoration: none;
-    border-bottom: 1px dotted #515151; }
+    border-bottom: 1px dotted #225378; }
   a strong {
     color: inherit; }
 
@@ -70,9 +73,7 @@ img {
   font-variant: normal;
   text-transform: none;
   line-height: 1;
-  /* Better Font Rendering =========== */
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale; }
+  /* Better Font Rendering =========== */ }
 
 .icon-home:before {
   content: "\f015"; }
