--- a/scss/base.scss
+++ b/scss/base.scss
@@ -2,11 +2,6 @@
  * The Basics
  */
 
-body {
-  margin: 0;
-  padding: 0;
-}
-
 html {
   font-family: $root-font-family;
   font-size: $root-font-size;
@@ -24,12 +19,15 @@ html {
 }
 
 body {
+  margin: 0;
+  padding: 0;
   color: $body-color;
   background-color: $body-bg;
   -webkit-text-size-adjust: 100%;
       -ms-text-size-adjust: 100%;
 
   /* Better Font Rendering =========== */
+  text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -43,6 +41,7 @@ a {
   // `:focus` is linked to `:hover` for basic accessibility
   &:hover,
   &:focus {
+    outline-width: 0;
     text-decoration: none;
     border-bottom: 1px dotted;  // from the link style on http://www.briangardner.com/
     border-bottom-color: inherit;
