--- a/scss/sidebar.scss
+++ b/scss/sidebar.scss
@@ -80,7 +80,7 @@
 
 /* About section */
 .sidebar-about h1 {
-  color: #fff;
+  color: #FF0000; //#fff;
   margin-top: 0;
   font-size: 2.5rem;
   font-weight: 200;
