--- a/scss/variables.scss
+++ b/scss/variables.scss
@@ -8,6 +8,12 @@ $gray-3: #767676;
 $gray-4: #515151;
 $gray-5: #313131;
 
+// $gray-dark:                 #373a3c !default;
+// $gray:                      #55595c !default;
+// $gray-light:                #818a91 !default;
+// $gray-lighter:              #eceeef !default;
+// $gray-lightest:             #f7f7f9 !default;
+
 // $red: #ac4142;
 // $orange: #d28445;
 // $yellow: #f4bf75;
@@ -18,12 +24,12 @@ $gray-5: #313131;
 // $brown: #8f5536;
 
 $body-bg: #fff;
-$link-color: #712275;
+$link-color: #FF0000;
 $body-color: #515151;
 $border-color: #e5e5e5;
 $code-color: #d14;
 $code-background-color: #f8f8f8;
-$post-title: #303030;
+$post-title: #515151;
 
 /**
  * Fonts
@@ -33,9 +39,9 @@ $post-title: #303030;
 $root-font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif !default;
 $code-font-family: Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace !default;
 
-$root-font-size: 18px;
+$root-font-size: 1rem !default; //18px;
 $root-line-height: 1.5;
-$large-font-size: 20px;
+$large-font-size: 1.25rem !default; //20px;
 
 /**
  * Breakpoints
