--- a/scss/type.scss
+++ b/scss/type.scss
@@ -6,8 +6,7 @@ h1, h2, h3, h4, h5, h6 {
   margin-bottom: .5rem;
   font-weight: 500;
   line-height: 1.25;
-  color: $gray-5;
-  text-rendering: optimizeLegibility;
+  // color: $gray-5;
 }
 
 h1 {
